优化插件系统

--- a/trc_console/Dockerfile
+++ b/trc_console/Dockerfile
@@ -1,7 +1,13 @@
 FROM registry.cn-hangzhou.aliyuncs.com/frmstock/frmphp:1
 
-LABEL maintainer frmstock
+MAINTAINER frmstock@163.com
+LABEL maintainer frmstock@163.com
+
+VOLUME /var/run/frmlinux
 
 COPY ./php_uuid/uuid.ini /etc/php.d/
 COPY ./php_uuid/uuid.so  /usr/lib64/php/modules/
 COPY --chown=apache:apache ./web /opt/trc/tp5/
+
+RUN ln -s /var/run/frmlinux/plugins/php /opt/trc/tp5/application/plugins/controller
+
