--- a/trc_nginx/Dockerfile
+++ b/trc_nginx/Dockerfile
@@ -1,6 +1,11 @@
 FROM nginx:1.20
 
-LABEL maintainer frmstock
+MAINTAINER frmstock@163.com
+LABEL maintainer frmstock@163.com
+
+VOLUME /var/run/frmlinux
 
 COPY ./etc /etc/
 COPY ./www /opt/trc/www/
+
+RUN ln -s /var/run/frmlinux/plugins/www /opt/trc/www/plugins
